--- a/www/index.html
+++ b/www/index.html
@@ -124,9 +124,7 @@
                     </div>
                     <div id="iBlk2" class="iStim">
                         <p id="iWrd"></p>
-                    </div>
-                    <div id="iBlk3">
-                        <p class="wng">X</p>
+                        <p id="wng1" class="wng">X</p>
                     </div>
                 </div>
             </div>
