--- a/www/index.html
+++ b/www/index.html
@@ -93,7 +93,7 @@
                             </tbody>
                         </table>
                         </div>
-                        <a id="iBtn" href="#iat" class="ui-btn ui-corner-all">Next</a>
+                        <a id="iBtn" href="#iat" class="ui-btn ui-corner-all">I Am Ready To Begin</a>
                     </div>
                 </div>
             </div>
@@ -125,6 +125,71 @@
                     <div id="iBlk2" class="iStim">
                         <p id="iWrd"></p>
                         <p id="wng1" class="wng">X</p>
+                    </div>
+                </div>
+            </div>
+            <div data-role="page" id="survey" data-theme="a">
+                <div data-role="header" data-position="fixed" data-tap-toggle="false">
+                    <div id="navSpc" data-role="navbar">
+                        <ul>
+                            <li><a id="fBack" onclick="back()" class="ui-btn ui-icon-carat-l ui-btn-icon-left">Back</a></li>
+                            <li></li>
+                            <li><a id="fwrd" onclick="forward()" class="ui-btn ui-icon-carat-r ui-btn-icon-right">Forward</a></li>   
+                        </ul>
+                    </div>
+                </div>
+                <div data-role="content">
+                    <div id="a1Blk" class="sur1">
+                        <p><b>How old are you?</b></p>
+                        <input type="text" pattern="[0-9]*" id="atxt" value="" placeholder="Age" />
+                        <a id="asb1" onclick="a1()" class="ui-btn ui-corner-all">Next</a>
+                    </div>
+                    <div id="a2Blk" class="sur1">
+                        <p><b>What is your race?</b><br><span class="smallTitle"><i>(Check all that apply.)</i></span></p>
+                        <fieldset id="a2fd" data-role="controlgroup">
+                            <input name="a2Op1" id="a2Op1" type="checkbox">
+                            <label for="a2Op1" class="chkbox">White</label>
+                            <input name="a2Op2" id="a2Op2" type="checkbox">
+                            <label for="a2Op2" class="chkbox">Black or African American</label>
+                            <input name="a2Op3" id="a2Op3" type="checkbox">
+                            <label for="a2Op3" class="chkbox">American Indian or Alaskan Native</label>
+                            <input name="a2Op4" id="a2Op4" type="checkbox">
+                            <label for="a2Op4" class="chkbox">Asian (for example, Chinese, Filipino, Indian)</label>
+                            <input name="a2Op5" id="a2Op5" type="checkbox">
+                            <label for="a2Op5" class="chkbox">Native Hawaiian or other Pacific Islander</label>
+                            <input name="a2Op6" id="a2Op6" type="checkbox">
+                            <label for="a2Op6" class="chkbox">Other</label>
+                        </fieldset>
+                        <div id="a2inpt">
+                            <input type="text" id="a2txt" value="" placeholder="Other" data-wrapper-class="standard-text">
+                        </div>
+                        <a id="asb2" onclick="a2()" class="ui-btn ui-corner-all">Next</a>
+                    </div>
+                    <div id="a3Blk" class="sur1">
+                        <p><b>To what extent do you think of <ins>death</ins> as being "like you" versus "not like you"?</b></p>
+                        <div id="sldWrap">
+                            <table data-role="table" id="a3Tbl" class="ui-responsive">
+                                <thead>
+                                    <tr>
+                                        <th></th>
+                                        <th></th>
+                                        <th></th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr>
+                                        <td id="td1">Not Like Me</td>
+                                        <td id="td2"><div class="full-slide">
+                                                <input name="a3Slide" id="a3Slide" min="0" max="100" value="50" step="1" data-popup-enabled="true" type="range">
+                                                <label for="a3Slide" class="ui-hidden-accessible"></label>
+                                            </div>
+                                        </td>
+                                        <td id="td3">Like Me</td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                        <a id="asb3" onclick="a3()" class="ui-btn ui-corner-all">Next</a>
                     </div>
                 </div>
             </div>
