--- a/www/index.html
+++ b/www/index.html
@@ -193,6 +193,28 @@
                     </div>
                 </div>
             </div>
+            <div data-role="page" id="sst" data-theme="a">
+                <div data-role="content">
+                    <div id="lft2">
+                    </div>
+                    <div id="rgt2">
+                    </div>
+                    <div id="sBlk1" class="welBlk welBlk2 welBlk3">
+                        <ul id="sinBlk" style="list-style-type:none">
+                            <li>In this task, please indicate the color of the words you see.</li>
+                            <li>If the word is written in <span style="color:red">red</span>, tap the RED side.</li>
+                            <li>If the word is written in <span style="color:blue">blue</span>, tap the BLUE side.</li>
+                            <li>A "+" will appear on the screen before each word appears to show you where to look.</li>
+                            <li>Please sort the color of each word as quickly and as accurately as you can.</li>
+                            <li><ins>GO AS FAST AS YOU CAN</ins> while making as few mistakes as possible!</li>
+                        </ul>
+                        <a id="sBtn2" onclick="stSST()" class="ui-btn ui-corner-all">Start</a>
+                    </div>
+                    <div id="sBlk2" class="iStim">
+                        <p id="sWrd"></p>
+                    </div>
+                </div>
+            </div>
             <div data-role="page" id="finish" data-theme="a">
                 <div data-role="content">
                     <a id="iBtn3" onclick="reset()" href="#home" data-transition="slide" class="ui-btn ui-corner-all">Continue</a>
