--- a/www/index.html
+++ b/www/index.html
@@ -212,6 +212,7 @@
                     </div>
                     <div id="sBlk2" class="iStim">
                         <p id="sWrd"></p>
+                        <p id="wng2" class="wng">X</p>
                     </div>
                 </div>
             </div>
