--- a/www/index.html
+++ b/www/index.html
@@ -141,7 +141,7 @@
                 <div data-role="content">
                     <div id="a1Blk" class="sur1">
                         <p><b>How old are you?</b></p>
-                        <input type="text" pattern="[0-9]*" id="atxt" value="" placeholder="Age" />
+                        <input type="tel" pattern="[0-9]*" id="atxt" value="" placeholder="Age" />
                         <a id="asb1" onclick="a1()" class="ui-btn ui-corner-all">Next</a>
                     </div>
                     <div id="a2Blk" class="sur1">
