--- a/www/index.html
+++ b/www/index.html
@@ -16,7 +16,7 @@
                     <div id="lgBtnGrp">
                         <a id="lgBtn" href="#settings" data-transition="slide" class="ui-btn ui-corner-all">Demo Settings</a>
                         <a id="stBtn" href="#wel" class="ui-btn ui-corner-all">Start Demo</a>
-                        <a id="iatBtn" onclick="iaton()" href="#iat" class="ui-btn ui-corner-all">IAT Only</a>                       
+                        <a id="iatBtn" onclick="iaton()" href="#iat" class="ui-btn ui-corner-all">IAT Only</a> 
                     </div>
                 </div>               
             </div> 
@@ -318,7 +318,7 @@
                 <div data-role="content">
                     <div id="a1Blk" class="sur1">
                         <p><b>How old are you?</b></p>
-                        <input type="text" pattern="\d*" id="atxt" value="numeric" placeholder="Age" />
+                        <input type="text" pattern="\d*" id="atxt" value="" placeholder="Age" />
                         <a id="asb1" onclick="a1()" class="ui-btn ui-corner-all">Next</a>
                     </div>
                     <div id="a2Blk" class="sur1">
