--- a/www/index.html
+++ b/www/index.html
@@ -313,8 +313,7 @@
                 <div data-role="content">
                     <div id="a1Blk" class="sur1">
                         <p><b>How old are you?</b></p>
-                        <input type="number" min="18" max="99" id="atxt" value="" placeholder="Age" />
-                        <input type="tel" id="atest" value="" placeholder="Age" />
+                        <input type="text" id="atxt" value="" readonly="readonly" placeholder="Age" />
                         <a id="asb1" onclick="a1()" class="ui-btn ui-corner-all">Next</a>
                     </div>
                     <div id="a2Blk" class="sur1">
@@ -365,6 +364,30 @@
                         <a id="asb3" onclick="a3()" class="ui-btn ui-corner-all">Next</a>
                     </div>
                 </div>
+                <div id="numPad">
+                        <table class="ui-bar-a" id="keypad" style="display: none;">
+                            <tr>
+                                <td><a data-role="button" class="num">7</a></td>
+                                <td><a data-role="button" class="num">8</a></td>
+                                <td><a data-role="button" class="num">9</a></td>
+                            </tr>
+                            <tr>
+                                <td><a data-role="button" class="num">4</a></td>
+                                <td><a data-role="button" class="num">5</a></td>
+                                <td><a data-role="button" class="num">6</a></td>
+                            </tr>
+                            <tr>
+                                <td><a data-role="button" class="num">1</a></td>
+                                <td><a data-role="button" class="num">2</a></td>
+                                <td><a data-role="button" class="num">3</a></td>
+                            </tr>
+                            <tr>
+                                <td><a data-role="button" class="del">Del</a></td>
+                                <td><a data-role="button" class="zero">0</a></td>
+                                <td><a data-role="button" class="don">Done</a></td>
+                            </tr>
+                        </table>
+                    </div>
                 <div data-role="footer" data-position="fixed" data-tap-toggle="false">
                     <div id="navSpc" data-role="navbar">
                         <ul>
