--- a/www/index.html
+++ b/www/index.html
@@ -310,15 +310,15 @@
                     <div id="a3Blk" class="sur1">
                         <p><b>Are you Spanish/Hispanic/Latino?</b><br><span class="smallTitle"><i>(Check all that apply.)</i></span></p>
                         <fieldset id="a3fd" data-role="controlgroup">
-                            <input name="a3Op1" id="a3Op1" value="No" type="checkbox">
+                            <input class="needsclick" name="a3Op1" id="a3Op1" value="No" type="checkbox">
                             <label for="a3Op1" class="chkbox">No</label>
-                            <input name="a3Op2" id="a3Op2" value="Yes, Mexican/Mexican-American/Chicano" type="checkbox">
+                            <input class="needsclick" name="a3Op2" id="a3Op2" value="Yes, Mexican/Mexican-American/Chicano" type="checkbox">
                             <label for="a3Op2" class="chkbox">Yes, Mexican/Mexican-American/Chicano</label>
-                            <input name="a3Op3" id="a3Op3" value="Yes, Puerto Rican" type="checkbox">
+                            <input class="needsclick" name="a3Op3" id="a3Op3" value="Yes, Puerto Rican" type="checkbox">
                             <label for="a3Op3" class="chkbox">Yes, Puerto Rican</label>
-                            <input name="a3Op4" id="a3Op4" value="Yes, Cuban" type="checkbox">
+                            <input class="needsclick" name="a3Op4" id="a3Op4" value="Yes, Cuban" type="checkbox">
                             <label for="a3Op4" class="chkbox">Yes, Cuban</label>
-                            <input name="a3Op5" id="a3Op5" value="Yes, other Spanish/Hispanic/Latino" type="checkbox">
+                            <input class="needsclick" name="a3Op5" id="a3Op5" value="Yes, other Spanish/Hispanic/Latino" type="checkbox">
                             <label for="a3Op5" class="chkbox">Yes, other Spanish/Hispanic/Latino</label>
                         </fieldset>
                         <a id="asb3" onclick="a3()" class="ui-btn ui-corner-all">Next</a>
@@ -327,17 +327,17 @@
                     <div id="a4Blk" class="sur1">
                         <p><b>What is your race?</b><br><span class="smallTitle"><i>(Check all that apply.)</i></span></p>
                         <fieldset id="a4fd" data-role="controlgroup">
-                            <input name="a4Op1" id="a4Op1" value="White" type="checkbox">
+                            <input class="needsclick" name="a4Op1" id="a4Op1" value="White" type="checkbox">
                             <label for="a4Op1" class="chkbox">White</label>
-                            <input name="a4Op2" id="a4Op2" value="Black or African American" type="checkbox">
+                            <input class="needsclick" name="a4Op2" id="a4Op2" value="Black or African American" type="checkbox">
                             <label for="a4Op2" class="chkbox">Black or African American</label>
-                            <input name="a4Op3" id="a4Op3" value="American Indian or Alaskan Native" type="checkbox">
+                            <input class="needsclick" name="a4Op3" id="a4Op3" value="American Indian or Alaskan Native" type="checkbox">
                             <label for="a4Op3" class="chkbox">American Indian or Alaskan Native</label>
-                            <input name="a4Op4" id="a4Op4" value="Asian (for example, Chinese, Filipino, Indian)" type="checkbox">
+                            <input class="needsclick" name="a4Op4" id="a4Op4" value="Asian (for example, Chinese, Filipino, Indian)" type="checkbox">
                             <label for="a4Op4" class="chkbox">Asian (for example, Chinese, Filipino, Indian)</label>
-                            <input name="a4Op5" id="a4Op5" value="Native Hawaiian or other Pacific Islander" type="checkbox">
+                            <input class="needsclick" name="a4Op5" id="a4Op5" value="Native Hawaiian or other Pacific Islander" type="checkbox">
                             <label for="a4Op5" class="chkbox">Native Hawaiian or other Pacific Islander</label>
-                            <input name="a4Op6" id="a4Op6" type="checkbox">
+                            <input class="needsclick" name="a4Op6" id="a4Op6" type="checkbox">
                             <label for="a4Op6" class="chkbox">Other</label>
                         </fieldset>
                         <div id="a4inpt">
@@ -403,21 +403,21 @@
                     <div id="a8Blk" class="sur1">
                         <p><b>With whom do you currently live?</b><br><span class="smallTitle"><i>(Check all that apply.)</i></span></p>
                         <fieldset id="a8fd" data-role="controlgroup">
-                            <input name="a8Op1" id="a8Op1" value="Roommate(s)" type="checkbox">
+                            <input class="needsclick" name="a8Op1" id="a8Op1" value="Roommate(s)" type="checkbox">
                             <label for="a8Op1" class="chkbox">Roommate(s)</label>
-                            <input name="a8Op2" id="a8Op2" value="Girlfriend/Boyfriend/Partner" type="checkbox">
+                            <input class="needsclick" name="a8Op2" id="a8Op2" value="Girlfriend/Boyfriend/Partner" type="checkbox">
                             <label for="a8Op2" class="chkbox">Girlfriend/Boyfriend/Partner</label>
-                            <input name="a8Op3" id="a8Op3" value="Spouse" type="checkbox">
+                            <input class="needsclick" name="a8Op3" id="a8Op3" value="Spouse" type="checkbox">
                             <label for="a8Op3" class="chkbox">Spouse</label>
-                            <input name="a8Op4" id="a8Op4" value="Children" type="checkbox">
+                            <input class="needsclick" name="a8Op4" id="a8Op4" value="Children" type="checkbox">
                             <label for="a8Op4" class="chkbox">Children</label>
-                            <input name="a8Op5" id="a8Op5" value="Other relatives" type="checkbox">
+                            <input class="needsclick" name="a8Op5" id="a8Op5" value="Other relatives" type="checkbox">
                             <label for="a8Op5" class="chkbox">Other relatives</label>
-                            <input name="a8Op6" id="a8Op6" value="Alone" type="checkbox">
+                            <input class="needsclick" name="a8Op6" id="a8Op6" value="Alone" type="checkbox">
                             <label for="a8Op6" class="chkbox">Alone</label>
-                            <input name="a8Op7" id="a8Op7" value="Homeless/Shelter" type="checkbox">
+                            <input class="needsclick" name="a8Op7" id="a8Op7" value="Homeless/Shelter" type="checkbox">
                             <label for="a8Op7" class="chkbox">Homeless/Shelter</label>
-                            <input name="a8Op8" id="a8Op8" type="checkbox">
+                            <input class="needsclick" name="a8Op8" id="a8Op8" type="checkbox">
                             <label for="a8Op8" class="chkbox">Other</label>
                         </fieldset>
                         <div id="a8inpt">
@@ -892,27 +892,27 @@
                     <div id="c3Blkd" class="sur1">
                         <p id="c3dq"></p>
                         <fieldset id="c3dfd" data-role="controlgroup">
-                            <input name="c3dOp1" id="c3dOp1" value="Overdose of medications" type="checkbox">
+                            <input class="needsclick" name="c3dOp1" id="c3dOp1" value="Overdose of medications" type="checkbox">
                             <label for="c3dOp1" class="chkbox1">Overdose of medications</label>
-                            <input name="c3dOp2" id="c3dOp2" value="Overdose of illegal drugs" type="checkbox">
+                            <input class="needsclick" name="c3dOp2" id="c3dOp2" value="Overdose of illegal drugs" type="checkbox">
                             <label for="c3dOp2" class="chkbox1">Overdose of illegal drugs</label>
-                            <input name="c3dOp3" id="c3dOp3" value="Poisoning with a household substance or gas" type="checkbox">
+                            <input class="needsclick" name="c3dOp3" id="c3dOp3" value="Poisoning with a household substance or gas" type="checkbox">
                             <label for="c3dOp3" class="chkbox1">Poisoning with a household substance or gas</label>
-                            <input name="c3dOp4" id="c3dOp4" value="Hanging" type="checkbox">
+                            <input class="needsclick" name="c3dOp4" id="c3dOp4" value="Hanging" type="checkbox">
                             <label for="c3dOp4" class="chkbox1">Hanging</label>
-                            <input name="c3dOp5" id="c3dOp5" value="Suffocation (for example, plastic bag over head)" type="checkbox">
+                            <input class="needsclick" name="c3dOp5" id="c3dOp5" value="Suffocation (for example, plastic bag over head)" type="checkbox">
                             <label for="c3dOp5" class="chkbox1">Suffocation (for example, plastic bag over head)</label>
-                            <input name="c3dOp6" id="c3dOp6" value="Drowning" type="checkbox">
+                            <input class="needsclick" name="c3dOp6" id="c3dOp6" value="Drowning" type="checkbox">
                             <label for="c3dOp6" class="chkbox1">Drowning</label>
-                            <input name="c3dOp7" id="c3dOp7" value="Cutting or Stabbing" type="checkbox">
+                            <input class="needsclick" name="c3dOp7" id="c3dOp7" value="Cutting or Stabbing" type="checkbox">
                             <label for="c3dOp7" class="chkbox1">Cutting or Stabbing</label>
-                            <input name="c3dOp8" id="c3dOp8" value="Gunshot" type="checkbox">
+                            <input class="needsclick" name="c3dOp8" id="c3dOp8" value="Gunshot" type="checkbox">
                             <label for="c3dOp8" class="chkbox1">Gunshot</label>
-                            <input name="c3dOp9" id="c3dOp9" value="Jumping from a high place" type="checkbox">
+                            <input class="needsclick" name="c3dOp9" id="c3dOp9" value="Jumping from a high place" type="checkbox">
                             <label for="c3dOp9" class="chkbox1">Jumping from a high place</label>
-                            <input name="c3dOp10" id="c3dOp10" value="Motor vehicle crash" type="checkbox">
+                            <input class="needsclick" name="c3dOp10" id="c3dOp10" value="Motor vehicle crash" type="checkbox">
                             <label for="c3dOp10" class="chkbox1">Motor vehicle crash</label>
-                            <input name="c3dOp11" id="c3dOp11" value="Any other method" type="checkbox">
+                            <input class="needsclick" name="c3dOp11" id="c3dOp11" value="Any other method" type="checkbox">
                             <label for="c3dOp11" class="chkbox1">Any other method</label>
                         </fieldset>
                         <a id="csb13" onclick="c3d()" class="ui-btn ui-corner-all">Next</a>
